# knuckles

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DECISIONS.md  Dockerfile  LICENSE  README.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml  release-sdk-py.yml  release-sdk-ts.yml
docs/: INTEGRATION.md  ONBOARDING.md  _config.yml  concepts.md  errors.md  faq.md  index.html  index.md  openapi.yaml  python.md  quickstart.md  recipes.md  typescript.md
docs/api/: index.html
examples/: README.md
examples/express-middleware/: middleware.ts
examples/nextjs-app/: .env.example
examples/nextjs-app/app/api/me/: route.ts
examples/nextjs-app/app/auth/google/: route.ts
examples/nextjs-app/app/auth/verify/: route.ts
examples/nextjs-app/app/sign-in/: page.tsx
examples/nextjs-app/lib/: knuckles.ts
examples/python-flask/: middleware.py
knuckles/: __init__.py  alembic.ini  app.py  wsgi.py
knuckles/api/v1/: __init__.py  apple_oauth.py  auth.py  google_oauth.py  magic_link.py  passkey.py
knuckles/core/: __init__.py  app_client_auth.py  auth.py  config.py  cors.py  database.py  exceptions.py  jwt.py  logging.py  observability.py  rate_limit.py  secrets.py  state_jwt.py
knuckles/data/: __init__.py
knuckles/data/models/: __init__.py  auth.py
knuckles/data/repositories/: __init__.py  auth.py
knuckles/migrations/: env.py
knuckles/migrations/versions/: 20260419_initial_schema.py  20260511_app_client_tenant_config.py
knuckles/services/: __init__.py  _oauth_upsert.py  apple_oauth.py  email.py  google_oauth.py  magic_link.py  passkey.py  tokens.py
scripts/: cleanup_magic_links.py  configure_app_client.py  register_app_client.py  start.sh
tests/: conftest.py
tests/api/: conftest.py  test_apple_oauth_routes.py  test_auth_routes.py  test_google_oauth_routes.py  test_magic_link_routes.py  test_new_endpoints.py  test_passkey_routes.py
tests/core/: test_app_client_auth.py  test_app_factory.py  test_jwt.py  test_observability.py  test_rate_limit.py  test_state_jwt.py
tests/data/: conftest.py  test_auth_repository.py
tests/services/: test_apple_oauth.py  test_google_oauth.py  test_magic_link.py  test_passkey.py  test_tokens.py
