[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["knuckles*"]

[project]
name = "knuckles"
version = "0.1.0"
description = "Centralized identity and authentication service"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0,<4",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "psycopg2-binary>=2.9,<3",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "cryptography>=42.0,<46",
    "PyJWT[crypto]>=2.8,<3",
    "requests>=2.31,<3",
    "webauthn>=2.0,<3",
    "gunicorn>=21.2,<23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "black>=24.0,<25",
    "ruff==0.15.11",
    "mypy>=1.9,<2",
    "types-requests>=2.31,<3",
    "responses>=0.25,<1",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["knuckles/migrations"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["knuckles"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["TCH001", "TCH002", "TCH003"]
# SQLAlchemy 2.0 Mapped annotations require runtime access to the
# referenced types, so TCH rules that move imports into TYPE_CHECKING
# blocks would break mapper configuration. UP047 suggests PEP 695 type
# parameters but the ParamSpec pattern used in require_auth is fine.
"knuckles/data/models/*.py" = ["TCH001", "TCH002", "TCH003"]
"knuckles/data/repositories/*.py" = ["TCH001", "TCH002", "TCH003"]
"knuckles/core/auth.py" = ["TCH001", "TCH002", "TCH003", "UP047"]
"knuckles/core/app_client_auth.py" = ["TCH001", "TCH002", "TCH003", "UP047"]
"knuckles/services/*.py" = ["TCH001", "TCH002", "TCH003"]
"knuckles/api/v1/*.py" = ["TCH001", "TCH002", "TCH003"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
implicit_reexport = true
exclude = ["knuckles/migrations/"]
disable_error_code = ["comparison-overlap", "list-item", "union-attr", "unused-ignore"]

[[tool.mypy.overrides]]
module = ["webauthn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["knuckles"]
omit = [
    "*/tests/*",
    "*/scripts/*",
    "*/migrations/*",
    "*/app.py",
    "*/wsgi.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
